--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.3",
     "compression": "^1.7.5",
     "connect-session-sequelize": "^7.1.7",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "debug": "^4.3.7",
