--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "chart.js": "^4.4.6",
     "html-to-react": "^1.7.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
   },
