--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "express-validation": "^4.1.1",
     "helmet": "^8.0.0",
     "hpp": "^0.2.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4",
     "passport": "^0.7.0",
     "path": "^0.12.7",
