--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "hpp": "^0.2.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4",
+    "node-cron": "^3.0.3",
     "passport": "^0.7.0",
     "path": "^0.12.7",
     "sequelize": "^6.37.5",
